=======
Changes
=======


1.4 (unreleased)
================

- Cleaned up a little: removed an unused testdata directory.


1.3 (2011-08-05)
================

- Pinned all used versions in buildout.

- Added trove classifiers to package meta data.


1.2 (2011-04-10)
================

- Made sure that newlines inside strings end up as newlines instead of ``\n``
  notation in XML pickles (fixes #8860).

- Install the fssync script in the development buildout.

- When dumping a PythonScript, leave out its _code attribute to reduce noise
  in the XML pickles (fixes #8859).

- Declared dependency on `zope.i18nmessageid`.

- Better error message when finding persistent objects in Extras.`


1.1 (2011-01-31)
================

- Renamed console commands to dump/load instead of checkout/checkin to avoid
  confusion with SCM operations.


1.0 (2011-01-31)
================

- Initial release.